# advent_of_code_2023

./: Cargo.toml  bench.sh  flamegraph.sh  generate.sh
day-01/: Cargo.toml
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/benches/: benchmarks.rs
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/src/: main.rs  part1.rs  part2.rs
day-06/: Cargo.toml
day-06/src/: _main.rs  part1.rs  part2.rs
template/: Cargo.toml
template/src/: part1.rs  part2.rs
