[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "{{project-name}}"
path = "benches/benchmarks.rs"
harness = false
